# HX-HouTiKu

./: .gitignore  LICENSE  README.md
.github/workflows/: build-android.yml  ci.yml  deploy-frontend.yml  deploy-worker.yml  manage-recipients.yml  publish-sdk.yml
android/: README.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
android/app/: build.gradle.kts  google-services.json.example  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: index.html  offline.html  setup_hint.html
android/app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_notification.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: file_paths.xml  network_security_config.xml
android/gradle/: libs.versions.toml
docs/: ANDROID.md  CONTRIBUTING.md  DEPLOYMENT.md  SDK.md  SECURITY.md  原型图.md
examples/py-sdk-demo/: README.md  demo.py  pyproject.toml
frontend/: .env.example  .env.production  capacitor.config.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: NotificationToast.tsx
frontend/src/components/layout/: AppShell.tsx  BottomNav.tsx  Header.tsx  Sidebar.tsx
frontend/src/components/message/: ContentRenderer.tsx  EmptyState.tsx  GroupChip.tsx  MessageCard.tsx  MessageList.tsx  PriorityBadge.tsx
frontend/src/components/ui/: Dialog.tsx  Switch.tsx  Toast.ts
frontend/src/hooks/: use-crypto.ts  use-messages.ts  use-pull-refresh.ts  use-push.ts  use-websocket.ts
frontend/src/lib/: api.ts  crypto.ts  db.ts  platform.ts  push.ts  utils.ts  ws-manager.ts
frontend/src/pages/: CloneDevice.tsx  Feed.tsx  GroupView.tsx  LockScreen.tsx  MessageDetail.tsx  SearchPage.tsx  Settings.tsx  SetupWizard.tsx  StarredPage.tsx
frontend/src/service-worker/: sw.ts
frontend/src/stores/: auth-store.ts  message-store.ts  settings-store.ts
frontend/src/styles/: globals.css
scripts/: hx-houtiku.sh  list-devices.sh  register-device.sh  setup.py  unified-push.sh
sdk/cf-email-worker/: README.md  package.json  pnpm-lock.yaml  wrangler.example.toml
sdk/cf-email-worker/src/: index.ts
sdk/python/: README.md  pyproject.toml
sdk/python/hx_houtiku/: __init__.py  cli.py  client.py  config.py  models.py
sdk/python/unified_push/: __init__.py  cli.py  client.py  config.py  crypto.py  models.py
worker/: package-lock.json  package.json  pnpm-lock.yaml  schema.sql  wrangler.example.toml  wrangler.toml
worker/src/: auth.ts  cron.ts  fcm.ts  index.ts  push-service.ts  rate-limit.ts  types.ts  webpush.ts
worker/src/durable-objects/: message-relay.ts
worker/src/routes/: channels.ts  clone.ts  config.ts  image-proxy.ts  messages.ts  push.ts  recipients.ts  subscribe.ts  test-push.ts  websocket.ts
(+30 files in other folders)
