[project]
name = "hx-houtiku"
version = "1.1.0"
description = "End-to-end encrypted push notification SDK for HX-HouTiKu"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "HX-HouTiKu Contributors" }]
keywords = ["push-notification", "e2e-encryption", "ecies", "cloudflare-workers"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
    "Topic :: Security :: Cryptography",
    "Typing :: Typed",
]
dependencies = [
    "eciespy>=0.4.2",
    "httpx>=0.28.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/HengXin666/HX-HouTiKu"
Repository = "https://github.com/HengXin666/HX-HouTiKu"
Documentation = "https://github.com/HengXin666/HX-HouTiKu#sdk-使用"
Issues = "https://github.com/HengXin666/HX-HouTiKu/issues"

[project.scripts]
hx-houtiku = "hx_houtiku.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
